--- a/discloud.config
+++ b/discloud.config
@@ -3,7 +3,7 @@ AVATAR=https://i.ytimg.com/vi/s6V4BjURhOs/maxresdefault.jpg
 TYPE=bot
 MAIN=index.js
 RAM=100
-AUTORESTART=false
+AUTORESTART=true
 VERSION=latest
 APT=tools
-ID=1719417447467
+ID=1724304045058
