--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "@napi-rs/canvas": "^0.1.67",
     "axios": "^1.9.0",
     "canvas": "^3.1.0",
+    "chalk": "^4.1.2",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
+    "inquirer": "^8.2.6",
     "node-fetch": "^3.3.2",
     "npm": "^11.1.0"
   },
