--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node menu.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
