--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
     "@discordjs/voice": "^0.18.0",
+    "@google/genai": "^1.22.0",
     "@napi-rs/canvas": "^0.1.71",
     "axios": "^1.9.0",
     "canvas": "^3.1.0",
